代码生成模板调优&&openapi接口文档 (#6)
* feat(mysql): mysqlClient初始化

* feat(user): 使用的render包位置移动

* feat(demo): redisClient初始化和使用示例

* feat(codeGen): 功能模块代码模板

* feat(genCode): 按模块生成代码

* feat(genCode): 基于最新的代码生成组件调整

* feat(genCode): 代码生成后自动注册路由

* feat(genCode): model层代码生成工具

* feat(genCode): 代码生成controller层初版

* feat(genCode): api层代码生成初版

* feat(genCode): api代码生成解决方法添加到接口的问题

* feat(genCode): api代码生成，路由格式化问题处理

* feat(genCode): 代码生成注册路由传参调整

* feat(app): 应用目录调整和代码模板调整

* feat(doc): 简易版本的readme文档

* feat(docker): Dockerfile文件

* feat(Dockerfile): 构建镜像成功

* feat(build): Dockerfile验证通过

* feat(Dockerfile): 镜像版本调整

* feat(openapi): 接口文档生成

* feat(genCode): 模板文件增加object层

* feat(example): 增加example代码示例

* feat(tpl): 模板调整

* feat(genCode): 按模块生成代码调整

* feat(genCode): api代码生成调整

* feat(mod): go-tools版本升级
